# sqllite-rust-sqlx

./: .gitignore  Cargo.toml  Makefile  Readme.md
.github/workflows/: ci.yml
src/: main.rs
